--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,18 @@ $~*
 #  ignore patch
 *.diff
 
+### VisualStudioCode
+
+# VS Code files for those working on multiple tools
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
 
 ### Node
 
