--- a/.editorconfig
+++ b/.editorconfig
@@ -18,6 +18,19 @@ indent_size = tab
 indent_style = tab
 tab_width=4
 
+### markdown
+[*.md]
+indent_size = 2
+indent_style = space
+tab_width = 2
+
+[*.{json,yml}]
+tab_width = 4
+indent_size = 4
+indent_style = space
+
+
+
 ###
 #
 # shell script settings
