--- a/.editorconfig
+++ b/.editorconfig
@@ -16,27 +16,28 @@ charset = utf-8
 # indent style
 indent_size = tab
 indent_style = tab
-tab_width=4
+tab_width = 4
+
+### EditoCinfig file]
+
+[**editorconfig]
+indent_size = tab
+indent_style = tab
+tab_width = 4
+
+
 
 ### markdown
 [*.md]
+indent_style = space
 indent_size = 2
-indent_style = space
 tab_width = 2
-
-[*.{json,yml}]
-tab_width = 4
-indent_size = 4
-indent_style = space
-
-
 
 ###
 #
 # shell script settings
 
-# script executable
-[**.]
+[**]
 indent_style = space
 indent_size = 2
 tab_width = 2
